objects/Business_Model_Configuration__c.object
<CustomObject>
    <description>Represents HKT functional, channel group eligibility and mobile eligibility business model. Also region and district mapping for Hong Kong address.</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Full address of the channel</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Free input, max 255 characters.</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appt_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Appt Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Address regions in Hong Kong</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hong_Kong_Island</fullName>
                    <label>Hong Kong Island 香港</label>
                </value>
                <value>
                    <fullName>Kowloon</fullName>
                    <label>Kowloon 九龍</label>
                </value>
                <value>
                    <fullName>New_Territories</fullName>
                    <label>New Territories 新界</label>
                </value>
                <value>
                    <fullName>Island_Districts</fullName>
                    <label>Island Districts 離島</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Code__c</fullName>
        <formula>BU_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Name</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (BU Name)</relationshipLabel>
        <relationshipName>BU_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <formula>Brand_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Logo_Large__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Logo (Large)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Logo_Small__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Logo (Small)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Channel Brand)</relationshipLabel>
        <relationshipName>Channel_Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCC_Code__c</fullName>
        <formula>CCC__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This CCC help test
Refer detail in this link &lt;https://team.com/abc&gt;</inlineHelpText>
        <label>CCC</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Channel CCC)</relationshipLabel>
        <relationshipName>Channel_CCC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Category__c</fullName>
        <label>Channel Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>CCsupport</fullName>
                    <label>CC support</label>
                </value>
                <value>
                    <fullName>RAN</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                    <label>Road show</label>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                    <isActive>false</isActive>
                    <label>CCS</label>
                </value>
                <value>
                    <fullName>Shop</fullName>
                    <isActive>false</isActive>
                    <label>Shop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_District_Code__c</fullName>
        <formula>Channel_District__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel District Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel District</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Channel District)</relationshipLabel>
        <relationshipName>Channel_District</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_LOB_Code__c</fullName>
        <formula>Channel_LOB__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel LOB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel LOB</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Channel LOB)</relationshipLabel>
        <relationshipName>Channel_LOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Logo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Channel Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Channel_Serving_Method__c</fullName>
        <description>Serving customer method in Channel</description>
        <inlineHelpText>How is customer served in this channel?</inlineHelpText>
        <label>Channel Serving Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assisted_non_face</fullName>
                    <label>Assisted-non-face</label>
                </value>
                <value>
                    <fullName>Self_served</fullName>
                    <label>Self-served</label>
                </value>
                <value>
                    <fullName>Assisted-on-face</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Size__c</fullName>
        <label>Channel Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Currency_ISO_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Channel_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE / FALSE</description>
        <label>Delivery Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Description__c</fullName>
        <description>Hong Kong district description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>District Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>Hong Kong Districts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Eligibility_Level__c</fullName>
        <label>EPC Eligibility Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Guest customer account controlled under per sales channel.</description>
        <label>Guest Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account (BMC)</relationshipLabel>
        <relationshipName>Guest_Customer_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Asset_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Asset Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Image_Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, only one Channel Payment Method of this type can be selected for each Order</description>
        <label>Is Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Offline_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the validation on the Status of Order Payment records created for this Payment Method will be bypassed during Order submission (e.g. for COD payments). Total amount validation stays valid.</description>
        <inlineHelpText>If true, the validation on the Status of Order Payment records created for this Payment Method will be bypassed during Order submission (e.g. for COD payments). Total amount validation stays valid.</inlineHelpText>
        <label>Is Offline Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Code__c</fullName>
        <formula>Legal_Entity__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Legal Entity)</relationshipLabel>
        <relationshipName>Legal_Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPPID__c</fullName>
        <description>OPP Payment Integration ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OPPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Create_Txn_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OPP Create Txn Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OPP_Link__c</fullName>
        <description>OPP link specific to the Payment Method</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OPP Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPP_Module_Code__c</fullName>
        <formula>OPP_Module__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP Module Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPP Module</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configuration (OPP Module)</relationshipLabel>
        <relationshipName>Business_Model_Configuration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPP_Retrieve_Txn_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OPP Retrieve Txn Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OPP_Timeout_Threshold__c</fullName>
        <formula>OPP_Module__r.Timeout_Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP Timeout Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OU_Nature__c</fullName>
        <label>OU Nature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business_Unit</fullName>
                    <label>Business Unit</label>
                </value>
                <value>
                    <fullName>Call_Center_Sales</fullName>
                    <label>Call Center Sales</label>
                </value>
                <value>
                    <fullName>Call_Center_Service</fullName>
                    <label>Call Center Service</label>
                </value>
                <value>
                    <fullName>Direct_Sales</fullName>
                    <label>Direct Sales</label>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Non_Sales_Support</fullName>
                    <label>Non-Sales Support</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Sales_Support</fullName>
                    <label>Sales Support</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OU_Type__c</fullName>
        <label>OU Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BusinessUnit</fullName>
                    <label>Business Unit</label>
                </value>
                <value>
                    <fullName>ChannelType</fullName>
                    <label>Channel Type</label>
                </value>
                <value>
                    <fullName>ChannelGroup</fullName>
                    <label>Channel Group</label>
                </value>
                <value>
                    <fullName>TeamGroup</fullName>
                    <label>Team Group</label>
                </value>
                <value>
                    <fullName>ChannelTeam</fullName>
                    <label>Channel Team</label>
                </value>
                <value>
                    <fullName>Cluster</fullName>
                </value>
                <value>
                    <fullName>ClusterType</fullName>
                    <label>Cluster Type</label>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>LOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Unit_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Unit (Channel)</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Org Unit (Channel))</relationshipLabel>
        <relationshipName>Business_Model_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code_Channel__c</fullName>
        <formula>Org_Unit_Channel__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Unit Code (Channel)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code_LOB__c</fullName>
        <formula>Org_Unit_LOB__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Unit Code (LOB)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Unit (LOB)</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configuration (Org Unit (LOB))</relationshipLabel>
        <relationshipName>Org_Unit_LOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(obsolete) Parent</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configuration (Parent)</relationshipLabel>
        <relationshipName>Master_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Channel_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Y / N</description>
        <label>Payment Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Channel_Code__c</fullName>
        <description>Group of payment methods supported in this channel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Group_Code__c</fullName>
        <formula>Payment_Method_Group__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method Group</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configuration (Business Model Configuration)</relationshipLabel>
        <relationshipName>Business_Model_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Type__c</fullName>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eCOM with SMS</fullName>
                </value>
                <value>
                    <fullName>Terminal</fullName>
                </value>
                <value>
                    <fullName>Direct API</fullName>
                </value>
                <value>
                    <fullName>eMoto</fullName>
                </value>
                <value>
                    <fullName>Record Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick_Up_Code__c</fullName>
        <formula>Pick_Up__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pick Up Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pick Up</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Pick Up)</relationshipLabel>
        <relationshipName>Pick_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Code_Key__c</fullName>
        <description>Used for lookup base on the Record Type and Code</description>
        <formula>IF(AND(NOT(ISBLANK(RecordType.DeveloperName )),NOT(ISBLANK( Code__c ))),RecordType.DeveloperName +&apos;-&apos;+Code__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Code Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Unique master data record key value, used for upsert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE / FALSE</description>
        <label>Sales Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_SMS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender SMS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Channel_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE / FALSE</description>
        <label>Service Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Label_Code__c</fullName>
        <formula>Service_Hour_Label__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Hour Label Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Label_Weekday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Hour Label (Weekday)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Label_Weekend__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Hour Label (Weekend)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Hour Label</label>
        <referenceTo>Business_Model_Configuration__c</referenceTo>
        <relationshipLabel>Business Model Configurations (Service Hour Label)</relationshipLabel>
        <relationshipName>Service_Hour_Label</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Weekday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Hour (Weekday)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Hour_Weekend__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Hour (Weekend)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_fund__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source of fund</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Channel_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE / FALSE</description>
        <label>Stock Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Team_Head__c</fullName>
        <description>Sub-Team Head of Channel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub-Team Head</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Head__c</fullName>
        <description>Team Head of Channel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Head</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Contact Number of Channel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tender_Image__c</fullName>
        <description>IMAGE(Image Path, Name)</description>
        <formula>Image_Path__c   &amp;&quot;/&quot;&amp;   Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tender Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Condition_Chi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Condition (Chi)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Eng__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions (Eng)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeout_Threshold__c</fullName>
        <label>Timeout Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Model Configuration</label>
    <listViews>
        <fullName>Address_Format</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Address_Format</value>
        </filters>
        <label>Address Format</label>
    </listViews>
    <listViews>
        <fullName>All_BU</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>CCC__c</columns>
        <columns>CCC_Code__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>EPC_Eligibility_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Org_Unit</value>
        </filters>
        <filters>
            <field>OU_Type__c</field>
            <operation>equals</operation>
            <value>BusinessUnit</value>
        </filters>
        <label>Org Unit (L1) BU</label>
    </listViews>
    <listViews>
        <fullName>All_Brand</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Brand_Logo_Large__c</columns>
        <columns>Brand_Logo_Small__c</columns>
        <columns>Legal_Entity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Brand</value>
        </filters>
        <label>Brand</label>
    </listViews>
    <listViews>
        <fullName>All_CCC</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Enable_Flag__c</columns>
        <columns>Parent_Flag__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>corporate expense -</value>
        </filters>
        <label>Cost Center Code</label>
    </listViews>
    <listViews>
        <fullName>All_Channel_Code</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>OU_Nature__c</columns>
        <columns>EPC_Eligibility_Level__c</columns>
        <columns>CCC__c</columns>
        <columns>CCC_Code__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OU_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Org_Unit</value>
        </filters>
        <filters>
            <field>OU_Type__c</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filters>
        <label>Org Unit (L7) Channel</label>
    </listViews>
    <listViews>
        <fullName>All_Channel_Group</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OU_Nature__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Org_Unit</value>
        </filters>
        <filters>
            <field>OU_Type__c</field>
            <operation>equals</operation>
            <value>ChannelGroup</value>
        </filters>
        <label>Org Unit (L3) Channel Group</label>
    </listViews>
    <listViews>
        <fullName>All_Channel_Team</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OU_Nature__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Business_Model_Configuration__c.Org_Unit</value>
        </filters>
        <filters>
            <field>OU_Type__c</field>
            <operation>equals</operation>
            <value>ChannelTeam</value>
        </filters>
        <label>Org Unit (L5) Channel Team</label>
    </listViews>
</CustomObject>